tests/test_struct/good/ambiguous_fields.catala_en
## Article

```catala
declaration structure Foo:
  data f content integer

declaration structure Bar:
  data f content integer

declaration scope A:
  context x content Foo
  context y content integer

scope A:
  definition x equals Foo { -- f: 1 }
  definition y equals x.f
```

```catala-test-inline
$ catala Interpret -s A
[WARNING] The field "f" of struct "Bar" is never used; maybe it's unnecessary?

┌─⯈ tests/test_struct/good/ambiguous_fields.catala_en:8.7-8:
└─┐
8 │   data f content integer
  │        ‾
  └─ Article
[RESULT] Computation successful!
```
