tests/test_struct/bad/ambiguous_fields.catala_en
## Article

```catala
declaration structure Foo:
  data f content integer

declaration structure Bar:
  data f content integer

declaration scope A:
  context x content Foo
  context y content integer

scope A:
  definition x equals Foo { -- f: 1 }
  definition y equals x.f
```

```catala-test-inline
$ catala Interpret -s A
[ERROR] This struct field name is ambiguous, it can belong to Foo or Bar. Disambiguate it by prefixing it with the struct name.

┌─⯈ tests/test_struct/bad/ambiguous_fields.catala_en:16.24-25:
└──┐
16 │   definition y equals x.f
   │                         ‾
   └─ Article
#return code 255#
```
